deploy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: node-project
  labels:
    name: node-project
    environment: production
